# qobuz-player

./: .gitignore  Cargo.toml  README.md  codebook.toml  justfile
.github/workflows/: pull-request-linux.yml  pull-request-macos.yml  pull-request.yml  release-linux-aarch.yml  release-linux.yml  release-macos.yml  release.yml
.sqlx/: query-1cf73555c646c6a599e3ae77674abbfb9b1284a9a41401d31533f8c9f10b34fd.json  query-270269ba3c86ea7cbfe815f2a81f3ced20af3fe16d52b89d0bc71054453b0562.json  query-336c8e7be5ea8f9d91cbf4e44319a7e2937a0c90e878f910137e97b3f673d68a.json  query-fc3bd46d56e8ec5b0570879f2e5d0dd53b7f89a86e1a1436ddd18c7cbb492fb1.json
qobuz-player-cli/: Cargo.toml
qobuz-player-cli/src/: cli.rs  lib.rs
qobuz-player-client/: Cargo.toml
qobuz-player-client/src/: client.rs  lib.rs  qobuz_models.rs  stream.rs
qobuz-player-client/tests/: integration_test.rs
qobuz-player-connect/: Cargo.toml
qobuz-player-connect/src/: lib.rs  main.rs
qobuz-player-controls/: Cargo.toml
qobuz-player-controls/.sqlx/: query-09aebefc2690febc37b81e5038872b67114e907eb195a1f468963b0ce452eb52.json  query-336c8e7be5ea8f9d91cbf4e44319a7e2937a0c90e878f910137e97b3f673d68a.json  query-3c7145415a3f11ec088dfbff9b6ef0a7b2518c8f8563eb00484588ad6ff418b4.json  query-64316d28021eced0d3013146e97b5f4851c82f31d0b7fdb20b2e58e3463e234f.json  query-88b2fe874a1da6a9eb3a74a32d204ed293da4238c112a6ccf8d5eafd7a131dc6.json  query-8b8d58b1d9b18b784771acbbc25df873139ad8a67270c3e92a2e8043d738143c.json
qobuz-player-controls/examples/: qobuz-api.md
qobuz-player-controls/migrations/: 20260404114739_add_auth_token.down.sql  20260409181934_clean_up_password_and_username.down.sql  20260415114225_default_audio_quality_to_null.down.sql  20260422120134_add_user_id_to_credentials.down.sql
qobuz-player-controls/src/: client.rs  cmaf.rs  controls.rs  crypto.rs  database.rs  downloader.rs  error.rs  flac_source_stream.rs  lib.rs  models.rs  notification.rs  player.rs  qobuz-api.md  simple_cache.rs  sink.rs  tracklist.rs
qobuz-player-controls/src/models/: mapper.rs
qobuz-player-gpio/: Cargo.toml
qobuz-player-gtk/: Cargo.toml
qobuz-player-gtk/flatpak/: cargo-sources.json  io.github.sofusa.QobuzPlayer.desktop  io.github.sofusa.QobuzPlayer.metainfo.xml  io.github.you.QobuzPlayer.desktop  manifest.json
qobuz-player-gtk/src/: callbacks.rs  lib.rs  main.rs  ui.rs
qobuz-player-gtk/src/ui/: album_detail_page.rs  albums_page.rs  artist_detail_page.rs  artists_page.rs  favorites_button.rs  grid_page.rs  library_page.rs  now_playing_bar.rs  playlist_detail_page.rs  playlists_page.rs  search_page.rs
qobuz-player-models/: Cargo.toml
qobuz-player-models/src/: lib.rs
qobuz-player-mpris/: Cargo.toml
qobuz-player-mpris/src/: lib.rs
qobuz-player-rfid/: Cargo.toml
qobuz-player-rfid/src/: lib.rs  main.rs
qobuz-player-tui/: Cargo.toml
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  main.rs  now_playing.rs  popup.rs  queue.rs  search.rs  ui.rs
qobuz-player-web/: Cargo.toml  dummy-index.html  package-lock.json  package.json
qobuz-player-web/assets/: manifest.json  script.js  styles.css  tailwind.css
qobuz-player-web/src/: app_state.rs  lib.rs  main.rs  page.rs  routes.rs  views.rs
qobuz-player-web/templates/: add-track-to-playlist.html  album-tracks.html  album.html  apple-header.html  artist-top-tracks.html  artist-tracks.html  artist.html  background-blur.html  base.html  button-group.html  controls.html  create-playlist.html  description.html  discover.html  error-page.html  favorites-tracks.html  favorites.html  genre-detail.html  head.html  info.html  lazy-load-component.html  list-albums-vertical.html  list-albums.html  list-artists.html  list-item.html  list-playlists-vertical.html  list-playlists.html  list-tracks.html  list.html  navigation.html  next.html  now-playing-content.html  now-playing.html  play-pause.html  player-state.html  playlist-edit-tracks.html  playlist-tracks.html  playlist.html  (+12 more)
(+41 files in other folders)
